# schnorr_halo2

./: .rustfmt.toml  Cargo.toml  README.md
src/: circuit.rs  evm_verifier.sol  main.rs  schnorr.rs  utils.rs
