[package]
name = "schnorr_halo2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
anyhow = "*"


[dependencies.snark-verifier]
git = "https://github.com/axiom-crypto/snark-verifier.git"
features = ["revm"]

[dependencies.snark-verifier-sdk]
git = "https://github.com/axiom-crypto/snark-verifier.git"
features = ["revm"]

[dependencies.pse-poseidon]
git = "https://github.com/axiom-crypto/pse-poseidon.git"
